LPD-87965 Replace hardcoded 8080 in AuthorizationTokenResourceTest