@@ -20,6 +20,7 @@ import com.liferay.portal.kernel.test.util.HTTPTestUtil;
 import com.liferay.portal.kernel.test.util.TestPropsValues;
 import com.liferay.portal.kernel.util.HashMapDictionaryBuilder;
 import com.liferay.portal.kernel.util.Http;
+import com.liferay.portal.kernel.util.PortalUtil;
 import com.liferay.portal.kernel.webcache.WebCachePoolUtil;
 import com.liferay.portal.test.rule.FeatureFlag;
 import com.liferay.portal.test.rule.Inject;
@@ -58,6 +59,9 @@ public class AuthorizationTokenResourceTest
 	public void testPostAuthorizationToken() throws Exception {
 		User user = TestPropsValues.getUser();
 
+		String portalURL =
+			"http://localhost:" + PortalUtil.getPortalServerPort(false);
+
 		OAuth2Application oAuth2Application =
 			_oAuth2ApplicationLocalService.addOAuth2Application(
 				user.getCompanyId(), user.getUserId(), user.getFullName(),
@@ -66,9 +70,8 @@ public class AuthorizationTokenResourceTest
 				OAuth2SecureRandomGenerator.generateClientId(),
 				ClientProfile.WEB_APPLICATION.id(),
 				OAuth2SecureRandomGenerator.generateClientSecret(), "",
-				List.of(), "http://localhost:8080", 0, null, "AI Hub", "",
-				List.of("http://localhost:8080"), false,
-				Arrays.asList("Liferay.AI.Hub.REST.everything"), false,
+				List.of(), portalURL, 0, null, "AI Hub", "", List.of(portalURL),
+				false, Arrays.asList("Liferay.AI.Hub.REST.everything"), false,
 				new ServiceContext());
 
 		ConfigurationTestUtil.saveConfiguration(
@@ -78,7 +81,7 @@ public class AuthorizationTokenResourceTest
 			).put(
 				"clientSecret", oAuth2Application.getClientSecret()
 			).put(
-				"serviceURL", "http://localhost:8080"
+				"serviceURL", portalURL
 			).build());
 
 		JSONObject jsonObject1 = HTTPTestUtil.invokeToJSONObject(
